--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-uuid": "^2.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
