--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-uuid": "^2.0.1",
     "react-redux": "^9.0.4",
     "uuid": "^9.0.1",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "expo-sqlite": "~11.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
